--- a/package.json
+++ b/package.json
@@ -1,20 +1,49 @@
 {
   "private": true,
-  "author": "mickwif <mickweb3@proton.me>",
-  "homepage": "https://euclid-twin.github.io/sodaxton",
   "scripts": {
-    "dev": "umi dev",
+    "start": "umi dev",
     "build": "umi build",
-    "postinstall": "umi setup",
-    "setup": "umi setup",
-    "start": "npm run dev"
+    "postinstall": "umi generate tmp",
+    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
+    "test": "umi-test",
+    "test:coverage": "umi-test --coverage"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,less,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write"
+    ]
   },
   "dependencies": {
-    "umi": "^4.0.49"
+    "@ant-design/pro-layout": "^6.5.0",
+    "react": "17.x",
+    "react-dom": "17.x",
+    "umi": "^3.5.36",
+    "@tanstack/react-query": "^4.3.9",
+    "@twa-dev/sdk": "^0.0.11",
+    "buffer": "^6.0.3",
+    "is-mobile": "^3.1.1",
+    "react-qr-code": "^2.0.8",
+    "react-ton-x": "^1.0.2",
+    "ton": "^12.1.3",
+    "ton-x": "^2.0.0",
+    "use-local-storage": "^2.3.6",
+    "grammy": "^1.11.2",
+    "@grammyjs/conversations": "github:grammyjs/conversations"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "typescript": "^4.1.2"
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@umijs/preset-react": "1.x",
+    "@umijs/test": "^3.5.36",
+    "lint-staged": "^10.0.7",
+    "prettier": "^2.2.0",
+    "typescript": "^4.1.2",
+    "yorkie": "^2.0.0"
   }
 }
