--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
-    "react": "17.x",
-    "react-dom": "17.x",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "umi": "^3.5.36",
     "@tanstack/react-query": "^4.3.9",
     "@twa-dev/sdk": "^0.0.11",
