--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
-    "yorkie": "^2.0.0"
+    "yorkie": "^2.0.0",
+    "umi-plugin-gh-pages": "0.x"
   }
 }
