--- a/package.json
+++ b/package.json
@@ -19,22 +19,23 @@
       "prettier --parser=typescript --write"
     ]
   },
+  "repository": {},
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "umi": "^3.5.36",
+    "@grammyjs/conversations": "github:grammyjs/conversations",
     "@tanstack/react-query": "^4.3.9",
     "@twa-dev/sdk": "^0.0.11",
     "buffer": "^6.0.3",
+    "grammy": "^1.11.2",
     "is-mobile": "^3.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.8",
     "react-ton-x": "^1.0.2",
     "ton": "^12.1.3",
     "ton-x": "^2.0.0",
-    "use-local-storage": "^2.3.6",
-    "grammy": "^1.11.2",
-    "@grammyjs/conversations": "github:grammyjs/conversations"
+    "umi": "^3.5.36",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
@@ -44,7 +45,7 @@
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
-    "yorkie": "^2.0.0",
-    "umi-plugin-gh-pages": "0.x"
+    "umi-plugin-gh-pages": "^1.0.1",
+    "yorkie": "^2.0.0"
   }
 }
