--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@tanstack/react-query": "^4.3.9",
     "@twa-dev/sdk": "^0.0.11",
     "buffer": "^6.0.3",
+    "dayjs": "^1.11.7",
     "grammy": "^1.11.2",
     "is-mobile": "^3.1.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.8",
