--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-ton-x": "^1.0.2",
     "ton": "^12.1.3",
     "ton-x": "^2.0.0",
+    "tonweb": "^0.0.60",
     "umi": "^3.5.36",
     "use-local-storage": "^2.3.6"
   },
