--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-qr-code": "^2.0.8",
     "react-ton-x": "^1.0.2",
     "ton": "^12.1.3",
+    "ton-core": "^0.48.0",
     "ton-x": "^2.0.0",
     "tonweb": "^0.0.60",
     "umi": "^3.5.36",
