--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "buffer": "^6.0.3",
     "dayjs": "^1.11.7",
     "grammy": "^1.11.2",
+    "ipfs-http-client": "^52.0.0",
     "is-mobile": "^3.1.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
