--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "ton-x": "^2.0.0",
     "tonweb": "^0.0.60",
     "umi": "^3.5.36",
-    "use-local-storage": "^2.3.6"
+    "use-local-storage": "^2.3.6",
+    "@tonconnect/ui-react": "^0.0.14",
+    "@tonconnect/sdk": "^2.0.7"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
