--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "umi dev",
+    "start": "cross-env APP_ENV=dev umi dev",
     "start:prod": "cross-env APP_ENV=prod umi dev",
     "build:test": "cross-env APP_ENV=test umi build",
     "build:prod": "cross-env APP_ENV=prod umi build",
@@ -57,6 +57,7 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.36",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
