--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "cross-env APP_ENV=dev umi dev",
     "start:prod": "cross-env APP_ENV=prod umi dev",
+    "build:dev": "cross-env APP_ENV=dev umi build",
     "build:test": "cross-env APP_ENV=test umi build",
     "build:prod": "cross-env APP_ENV=prod umi build",
     "postinstall": "umi generate tmp",
