--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "react-qr-code": "^2.0.8",
     "react-ton-x": "^1.0.2",
     "ton": "^12.1.3",
+    "ton-contract-executor": "^0.7.0",
     "ton-core": "^0.48.0",
     "ton-x": "^2.0.0",
     "tonweb": "^0.0.60",
     "umi": "^3.5.36",
-    "use-local-storage": "^2.3.6"
+    "use-local-storage": "^2.3.6",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
