--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@aws-crypto/sha256-js": "^4.0.0",
     "@grammyjs/conversations": "github:grammyjs/conversations",
     "@tanstack/react-query": "^4.3.9",
     "@tonconnect/sdk": "^2.0.7",
